# RAG-retrieval-quality-evaluation-

./: .dockerignore  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  render.yaml
backend/: Dockerfile  README.md  requirements.txt
backend/app/: main.py
dashboard/: app.py  requirements.txt
dashboard/css/: theme.css
dashboard/utils/: data_loader.py  html.py
dashboard/views/: about.py  analytics.py  data_explorer.py  insights.py  query_explorer.py
data/: eval_set.jsonl
data/corpus/: access-control-runbook.md  api-changelog.md  api-quotas.md  api-versioning.md  audit-logs.md  authentication.md  benefits-overview.md  billing-invoicing.md  code-of-conduct.md  custom-domains.md  customer-support-sla.md  data-export.md  data-processing-agreement.md  data-retention.md  database-migration-runbook.md  deployment-process.md  disaster-recovery.md  equipment-policy.md  error-codes.md  expense-policy.md  incident-response.md  monitoring-alerting.md  on-call-rotation.md  onboarding-checklist.md  parental-leave.md  performance-reviews.md  postmortem-process.md  pricing-tiers.md  pto-policy.md  rate-limits.md  remote-work-policy.md  rollback-procedure.md  sandbox-environment.md  sdks.md  secrets-management.md  security-policy.md  sso-saml.md  status-page.md  travel-policy.md  webhooks.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
reports/run_local_full/: report.md  results.json
src/rag_eval/: __init__.py  cli.py  corpus.py  judge.py  (+5 more)
tests/: test_corpus.py  test_metrics.py  test_retrievers.py
(+46 files in other folders)
