[project]
name = "rag-eval"
version = "0.1.0"
description = "A framework for evaluating RAG retrieval quality: compare BM25, dense, and hybrid retrieval strategies on precision/recall/MRR/NDCG plus LLM-judged faithfulness and answer relevance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "certifi>=2024.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
]

[project.scripts]
rag-eval = "rag_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
